--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,11 @@
 .gridContainer {
     display: grid;
-    grid-template-columns: repeat(16, auto);
-    grid-template-rows: repeat(16, auto);
+    grid-template-columns: repeat(var(--columns), auto);
+    grid-template-rows: repeat(var(--rows), auto);
     width: 700px;
     height: 700px;
-    transform: translate(400px, 24px);
+    margin: 0 auto;
+    transform: translate(0, 20px);
 }
 
 .gridItem {
